--- a/games/AARONDINO/index.html
+++ b/games/AARONDINO/index.html
@@ -18,8 +18,8 @@
     />
     <title>Dino Game</title>
     <div class="center-align"></div>
-    <link rel="stylesheet" href="AARONDINO/dino.min.css" />
-    <script src="AARONDINO/dino.js"></script>
+    <link rel="stylesheet" href="./dino.min.css" />
+    <script src="./dino.js"></script>
   </head>
   <body class="offline">
     <div class="interstitial-wrapper">
